# website

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: deploy.yml
scripts/: generate.py
static/: style.css
templates/: base.html  index.html  page.html
